appId: com.squer.autotestwithmaestro
tags:
  - deploy
---
#- runFlow: helper/openApp.yml
- runFlow: helper/openApp_preview.yml
- tapOn:
    id: "modal-info"
- assertVisible:
    id: "dialog-title"
- runFlow:
    when:
      platform: iOS
    commands:
    - swipe:
       from: 'Info'
       direction: DOWN
- runFlow:
    when:
      platform: android
    commands:
      - tapOn: "Navigate up"
- assertNotVisible: "A cool modal"



